<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/current_project"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/current_project" />
        <item
            android:id="@+id/nav_projects"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/projects" />
        <item
            android:id="@+id/nav_sessions"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/sessions" />
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/statistics" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/about" />
        </menu>
    </item>
</menu>
